--- a/video1.html
+++ b/video1.html
@@ -74,7 +74,7 @@
 
 <body>
     <div id="wrapper">
-        <video src="./images/Refeel_main_final.mp4" autoplay loop muted playsinline width="100%"></video></a>
+        <video src="Refeel_main_final.mp4" autoplay loop muted playsinline width="100%"></video></a>
     </div>
     <div class="fixed_box">
         <a href="포트폴리오사이트주소" class="home_btn">
